--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "beta",
     "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.0",
     "postcss-loader": "^1.3.1",
     "pug": "^2.0.0-beta11",
     "pug-html-loader": "^1.1.0",
     "pug-loader": "^2.3.0",
     "sass-loader": "^6.0.1",
+    "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
   }
